--- a/BlazorAdmin2/Shared/LoginLayout.razor
+++ b/BlazorAdmin2/Shared/LoginLayout.razor
@@ -1,5 +1,75 @@
-﻿
+﻿@page "/login"
+@using BlazorAdmin2.Components
+@using Newtonsoft.Json
+@inject IJSRuntime _JsRuntime
+@inject ServiceComponent Service
+
+
+<div class="col-md-6">
+    UserID:
+    <input class="form-control" @bind="userId" />
+    Pass:
+    <input class="form-control" @bind="pass"/>
+    <br/>
+    
+    <button class="btn btn-info" @onclick="@(()=> CreateToken())" >Login</button>
+    <button class="btn btn-info" @onclick="@(()=> PostMethod())" >Post</button>
+    
+    <hr/>
+    <br/>
+    
+    <label class="col-form-label">@Bearer</label>
+    <label class="col-form-label">@Message</label>
+
+
+</div>
+
 
 @code {
+    string userId;
+    string pass;
+    string Message;
 
+    [Parameter]
+    public string Bearer { get; set; }
+
+    public void CreateToken()
+    {
+        Message = "";
+        Bearer = "";
+
+        var response = Service.ResponseJson("http://localhost:62054/api/login?userId=" + userId + "&pass=" + pass + "", null, null, null, RestSharp.Method.GET);
+
+        if (response.StatusCode == System.Net.HttpStatusCode.OK)
+        {
+            var json = JsonConvert.DeserializeObject<Dictionary<string, string>>(response.Content)["token"].ToString();
+            Bearer = json;
+            Message = "Create Token Succefully:" + response.StatusCode.ToString();
+
+        }
+        else
+        {
+            Message = "Create Token Error" + response.StatusCode.ToString();
+        }
+    }
+    public void PostMethod()
+    {
+        Message = "";
+        Dictionary<string, string> header = new Dictionary<string, string>();
+        header.Add("Authorization", "Bearer" + Bearer);
+        var value = Guid.NewGuid().ToString();
+
+        var response = Service.ResponseJsonAuth("http://localhost:62054/api/login", value, header, RestSharp.Method.GET);
+
+        if (response.StatusCode == System.Net.HttpStatusCode.OK)
+        {
+            Message = "Post Succefully:" + response.StatusCode.ToString();
+
+        }
+        else
+        {
+            Message = "Post Error" + response.StatusCode.ToString();
+        }
+
+    }
 }
