--- a/BlazorAdmin2/Shared/SidebarNav.razor
+++ b/BlazorAdmin2/Shared/SidebarNav.razor
@@ -24,15 +24,15 @@
     <div class="sidebar-heading">
         Interface
     </div>
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
+<!-- Nav Item - Pages Collapse Menu -->
+<li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseClientes" aria-expanded="true" aria-controls="collapseTwo">
             <i class="fas fa-fw fa-cog"></i>
             <span>Clientes</span>
         </a>
         <div id="collapseClientes" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="buttons">Criar ficha de clientes</a>
+                <a class="collapse-item" href="cfichacliente">Criar ficha de clientes</a>
                 <a class="collapse-item" href="vclientes">Ver fichas de clientes</a>
             </div>
         </div>
@@ -45,7 +45,7 @@
         </a>
         <div id="collapseEncomendas" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="buttons">Criar encomenda</a>
+                <a class="collapse-item" href="cencomenda">Criar encomenda</a>
                 <a class="collapse-item" href="vencomendas">Ver encomendas</a>
             </div>
         </div>
@@ -58,7 +58,7 @@
         </a>
         <div id="collapseFornecedores" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="buttons">Criar Fornecedor</a>
+                <a class="collapse-item" href="cfornecedor">Criar Fornecedor</a>
                 <a class="collapse-item" href="vfornecedores">Ver Fornecedores</a>
             </div>
         </div>
@@ -71,7 +71,7 @@
         </a>
         <div id="collapseCompras" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="buttons">Inserir compra</a>
+                <a class="collapse-item" href="icompras">Inserir compra</a>
                 <a class="collapse-item" href="vcompras">Ver compras</a>
             </div>
         </div>
@@ -84,7 +84,7 @@
         </a>
         <div id="collapseProdutos" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="buttons">Criar produto</a>
+                <a class="collapse-item" href="cprodutos">Criar produto</a>
                 <a class="collapse-item" href="vprodutos">Ver produtos</a>
             </div>
         </div>
@@ -97,7 +97,7 @@
         </a>
         <div id="collapseModelos" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="buttons">Criar modelos</a>
+                <a class="collapse-item" href="cmodelo">Criar modelos</a>
                 <a class="collapse-item" href="vmodelos">Ver modelos</a>
             </div>
         </div>
@@ -110,24 +110,12 @@
         </a>
         <div id="collapseMoldes" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="buttons">Criar molde</a>
+                <a class="collapse-item" href="cmoldes">Criar molde</a>
                 <a class="collapse-item" href="vmoldes">Ver moldes</a>
             </div>
         </div>
     </li>
-    <!-- Nav Item - Pages Collapse Menu -->
-    <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseStock" aria-expanded="true" aria-controls="collapseTwo">
-            <i class="fas fa-fw fa-cog"></i>
-            <span>Stock</span>
-        </a>
-        <div id="collapseStock" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="vstock">Ver stock</a>
-            </div>
-        </div>
-    </li>
-    <!-- Nav Item - Pages Collapse Menu -->
+<!-- Nav Item - Pages Collapse Menu -->
     <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseAdmin" aria-expanded="true" aria-controls="collapseTwo">
             <i class="fas fa-fw fa-cog"></i>
