--- a/BlazorAdmin2/Pages/Encomendas/Cencomenda.razor
+++ b/BlazorAdmin2/Pages/Encomendas/Cencomenda.razor
@@ -2,51 +2,126 @@
 @using BlazorAdmin2.Data
 @inject IJSRuntime JsRuntime
 
-<h1>Teste Formulario Para Clientes</h1>
-
-<EditForm Model="@cFichaCliente" OnValidSubmit="@InsertFichaCliente">
-    <DataAnnotationsValidator/>
-
-    <p>
-        <label for="nome">Nome:</label>
-        <InputText id="nome" @bind-Value="cFichaCliente.Nome"/>
-        <ValidationMessage For="@(() => cFichaCliente.Nome)"/>
-    </p>
-    <p>
-        <label for="telefone">Telefone:</label>
-        <InputNumber id="telefone" @bind-Value="cFichaCliente.Telefone"/>
-        <ValidationMessage For="@(() => cFichaCliente.Telefone)"/>
-    </p>
-    <p>
-        <label for="email">Email:</label>
-        <InputText id="email" placeholder="Boas" @bind-Value="cFichaCliente.Email"/>
-        <ValidationMessage For="@(() => cFichaCliente.Email)"/>
-    </p>
-    <p>
-        <label for="morada">Morada:</label>
-        <InputText id="morada" @bind-Value="cFichaCliente.Morada"/>
-        <ValidationMessage For="@(() => cFichaCliente.Morada)"/>
-    </p>
-    <p>
-        <label for="moradaopcional">Morada Opcional:</label>
-        <InputText id="moradaopcional" @bind-Value="cFichaCliente.Moradaopcional"/>
-    </p>
-    <p>
-        <label for="codigopostal">Codigo Postal:</label>
-        <InputText id="codigopostal" @bind-Value="cFichaCliente.Codigopostal"/>
-        <ValidationMessage For="@(() => cFichaCliente.Codigopostal)"/>
-    </p>
-    <button type="submit">Submit</button>
-</EditForm>
+<div class="container-fluid">
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Cabeçalho Encomenda</h6>
+        </div>
+        <EditForm Model="@cFichaCliente" OnValidSubmit="@InsertFichaCliente">
+            <DataAnnotationsValidator />
 
 
-@code {
+            <label for="nome">IdCliente:</label>
+            <InputText id="nome"class="form-control" @bind-Value="cFichaCliente.Nome" />
+            <ValidationMessage For="@(() => cFichaCliente.Nome)" />
 
-    private CFichaCliente cFichaCliente = new CFichaCliente();
 
-    private async Task InsertFichaCliente()
-    {
-        // await JsRuntime.InvokeVoidAsync("setElementTextById", "resultJson", JsonSerializer.Serialize(cFichaCliente));
+            <label for="telefone">Telefone</label>
+            <InputNumber id="telefone" class="form-control" @bind-Value="cFichaCliente.Telefone" />
+            <ValidationMessage For="@(() => cFichaCliente.Telefone)" />
+
+
+            <label for="morada">Email:</label>
+            <InputText id="morada" class="form-control" @bind-Value="cFichaCliente.Morada" />
+            <ValidationMessage For="@(() => cFichaCliente.Morada)" />
+
+
+            <label for="moradaopcional">Morada</label>
+            <InputText id="moradaopcional" class="form-control" @bind-Value="cFichaCliente.Moradaopcional" />
+
+
+            <label for="codigopostal">Codigo Postal</label>
+            <InputText id="codigopostal" class="form-control" @bind-Value="cFichaCliente.Codigopostal" />
+            <ValidationMessage For="@(() => cFichaCliente.Codigopostal)" />
+        </EditForm>
+    </div>
+</div>
+
+
+        <div class="container-fluid">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">Formulario Encomenda</h6>
+            </div>
+            <EditForm Model="@cFichaCliente" OnValidSubmit="@InsertFichaCliente">
+                <DataAnnotationsValidator />
+
+                <label for="nome">Código</label>
+                <InputText id="nome" class="form-control" @bind-Value="cFichaCliente.Nome" />
+                <ValidationMessage For="@(() => cFichaCliente.Nome)" />
+
+                <label for="telefone">Referência</label>
+                <InputNumber id="telefone" class="form-control" @bind-Value="cFichaCliente.Telefone" />
+                <ValidationMessage For="@(() => cFichaCliente.Telefone)" />
+
+
+                <label for="email">Descrição</label>
+                <InputText id="email" class="form-control" placeholder="Boas" @bind-Value="cFichaCliente.Email" />
+                <ValidationMessage For="@(() => cFichaCliente.Email)" />
+
+
+                <label for="morada">Quantidade</label>
+                <InputText id="morada" class="form-control" @bind-Value="cFichaCliente.Morada" />
+                <ValidationMessage For="@(() => cFichaCliente.Morada)" />
+
+
+                <label for="moradaopcional">Peso</label>
+                <InputText id="moradaopcional" class="form-control" @bind-Value="cFichaCliente.Moradaopcional" />
+
+
+                <label for="codigopostal">Preco</label>
+                <InputText id="codigopostal" class="form-control" @bind-Value="cFichaCliente.Codigopostal" />
+                <ValidationMessage For="@(() => cFichaCliente.Codigopostal)" />
+
+
+                <label for="codigopostal">Data</label>
+                <InputText id="codigopostal" class="form-control" @bind-Value="cFichaCliente.Codigopostal" />
+                <ValidationMessage For="@(() => cFichaCliente.Codigopostal)" />
+
+                <label for="codigopostal">Apontamentos</label>
+                <InputText id="codigopostal" class="form-control" @bind-Value="cFichaCliente.Codigopostal" />
+                <ValidationMessage For="@(() => cFichaCliente.Codigopostal)" />
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </EditForm>
+        </div>
+    </div>
+
+<div class="container-fluid">
+
+<div class="card shadow mb-4">
+    <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Encomenda</h6>
+    </div>
+    <div class="card-body">
+        <div class="table-responsive">
+            <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                <div class="col-sm-12">
+                    <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
+                        <thead>
+                        <tr role="row"><th class="sorting_asc" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Name: activate to sort column descending" style="width: 101px;">IdModelo</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Position: activate to sort column ascending" style="width: 170px;">Descrição</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Office: activate to sort column ascending" style="width: 71px;">Peso</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Age: activate to sort column ascending" style="width: 31px;">Unidade</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Start date: activate to sort column ascending" style="width: 68px;">Fornecedor</th><th class="sorting" tabindex="0" aria-controls="dataTable" rowspan="1" colspan="1" aria-label="Salary: activate to sort column ascending" style="width: 67px;">Data Criação</th></tr>
+                        </thead>
+                        <tfoot>
+                        <tr><th rowspan="1" colspan="1">IdModelo</th><th rowspan="1" colspan="1">Descrição</th><th rowspan="1" colspan="1">Peso</th><th rowspan="1" colspan="1">Unidade</th><th rowspan="1" colspan="1">Fornecedor</th><th rowspan="1" colspan="1">Data Criação</th></tr>
+                        </tfoot>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+    
+
+
+    @code {
+
+        private CFichaCliente cFichaCliente = new CFichaCliente();
+
+        private async Task InsertFichaCliente()
+        {
+            // await JsRuntime.InvokeVoidAsync("setElementTextById", "resultJson", JsonSerializer.Serialize(cFichaCliente));
+        }
+
     }
-
-}
