--- a/BlazorAdmin2/Pages/Encomendas/Cencomenda.razor
+++ b/BlazorAdmin2/Pages/Encomendas/Cencomenda.razor
@@ -11,7 +11,7 @@
             <DataAnnotationsValidator />
 
 
-            <label for="nome">IdCliente:</label>
+            <label for="nome">IdCliente:zz</label>
             <InputText id="nome"class="form-control" @bind-Value="cFichaCliente.Nome" />
             <ValidationMessage For="@(() => cFichaCliente.Nome)" />
 
