--- a/BlazorAdmin2/Pages/Fornecedores/Vfornecedores.razor
+++ b/BlazorAdmin2/Pages/Fornecedores/Vfornecedores.razor
@@ -1,12 +1,8 @@
 ﻿@page "/vfornecedores"
 
-<h3>Vfornecedores</h3>
-
 <div class="container-fluid">
 
-    <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-    <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
+    <!--<p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>!-->
 
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
