--- a/BlazorAdmin2/Shared/SidebarNav.razor
+++ b/BlazorAdmin2/Shared/SidebarNav.razor
@@ -58,7 +58,7 @@
         </a>
         <div id="collapseFornecedores" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="cfornecedor">Criar Fornecedor</a>
+                <a class="collapse-item" href="cfornecedores">Criar Fornecedor</a>
                 <a class="collapse-item" href="vfornecedores">Ver Fornecedores</a>
             </div>
         </div>
@@ -71,7 +71,7 @@
         </a>
         <div id="collapseCompras" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="icompras">Inserir compra</a>
+                <a class="collapse-item" href="icompra">Inserir compra</a>
                 <a class="collapse-item" href="vcompras">Ver compras</a>
             </div>
         </div>
