--- a/BlazorAdmin2/Pages/Index.razor
+++ b/BlazorAdmin2/Pages/Index.razor
@@ -1,14 +1,8 @@
 ﻿@page "/"
 
-<div class="container-fluid">
+<div class="container-fluid"
 
-    <!-- Page Heading -->
-    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Hello World</h1>
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
-    </div>
-
-    <!-- Content Row -->
+<!-- Content Row -->
     <div class="row">
 
         <!-- Earnings (Monthly) Card Example -->
