--- a/BlazorAdmin2/Pages/Modelos/Vmodelos.razor
+++ b/BlazorAdmin2/Pages/Modelos/Vmodelos.razor
@@ -1,17 +1,11 @@
 ﻿@page "/vmodelos"
 
-<h3>Vmodelos</h3>
-
 <div class="container-fluid">
-
-    <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Tables</h1>
-    <p class="mb-4">DataTables is a third party plugin that is used to generate the demo table below. For more information about DataTables, please visit the <a target="_blank" href="https://datatables.net">official DataTables documentation</a>.</p>
 
     <!-- DataTales Example -->
     <div class="card shadow mb-4">
         <div class="card-header py-3">
-            <h6 class="m-0 font-weight-bold text-primary">Lista de Modelos</h6>
+            <h6 class="m-0 font-weight-bold text-primary">Listagem de Modelos</h6>
         </div>
         <div class="card-body">
             <div class="table-responsive">
