--- a/BlazorAdmin2/App.razor
+++ b/BlazorAdmin2/App.razor
@@ -1,5 +1,4 @@
-﻿<CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(Program).Assembly">
+﻿<Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)"/>
         </Found>
@@ -8,5 +7,5 @@
                 <p>Sorry, there's nothing at this address.</p>
             </LayoutView>
         </NotFound>
-    </Router>
-</CascadingAuthenticationState>
+</Router>
+
